[project]
name = "PostDirectorX3"
version = "0.1.0"
authors = [
    {name = "Yoham Gabriel ~ Urbine@GitHub", email = "yohamg@programmer.net" }
]
description = "A comprehensive Python-based SEO toolset featuring machine learning classification, content optimization, and workflow automation for WordPress-based adult websites."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "Cython~=0.29.37",
    "PySocks~=1.7.1",
    "Sphinx~=8.1.3",
    "aiohttp>=3.12.6",
    "attrs~=24.2.0",
    "beautifulsoup4~=4.12.3",
    "certifi~=2022.12.7",
    "charset-normalizer~=3.1.0",
    "click~=8.1.7",
    "cffi~=1.15",
    "cryptography~=41.0.5",
    "docutils~=0.21.2",
    "h11~=0.14.0",
    "html5lib~=1.1",
    "idna~=3.4",
    "joblib~=1.4.2",
    "lmstudio>=1.3.1",
    "lxml~=5.3.0",
    "markdown-it-py~=3.0.0",
    "mdurl~=0.1.2",
    "nltk~=3.9.1",
    "numpy~=2.1.3",
    "oauthlib~=3.2.2",
    "opencv-python>=4.11.0.86",
    "outcome~=1.3.0.post0",
    "pillow~=10.4.0",
    "platformdirs~=2.6.2",
    "pyclip~=0.7.0",
    "pygments~=2.18.0",
    "regex~=2024.11.6",
    "requests-oauthlib~=2.0.0",
    "requests~=2.32.3",
    "rich>=13.9.4",
    "ruff>=0.11.12",
    "scikit-learn~=1.5.2",
    "scipy~=1.14.1",
    "selenium~=4.24.0",
    "setuptools~=71.1.0",
    "sniffio~=1.3.1",
    "sortedcontainers~=2.4.0",
    "soupsieve~=2.5",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-dark-mode>=1.3.0",
    "sphinx-rtd-theme>=3.0.2",
    "threadpoolctl~=3.5.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers>=4.52.4",
    "trio-websocket~=0.11.1",
    "trio~=0.26.2",
    "tqdm~=4.67.0",
    "typing_extensions~=4.12.2",
    "urllib3~=2.2.3",
    "websocket-client~=1.8.0",
    "wsproto~=1.2.0",
    "xlsxwriter~=3.2.0",
    "torchvision>=0.22.0",
    "ollama>=0.5.1",
    "langchain-ollama>=0.3.3",
    "langchain-community>=0.3.25",
    "gradio>=5.38.0",
]
